View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032036 | Open CASCADE | OCCT:Visualization | public | 2021-01-03 00:33 | 2021-01-16 14:12 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Mac | OS | OS | ||
Product Version | 7.6.0 | ||||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032036: Visualization, TKOpenGl - broken Cubemap background on GeForce 320M | ||||
Description | Cubemap background is displayed with artifacts on GeForce 320M after 0031649.Draw[11]> vglinfo OpenGL info: GLvendor: NVIDIA Corporation GLdevice: NVIDIA GeForce 320M OpenGL Engine GLversion: 2.1 NVIDIA-10.0.35 310.90.10.05b12 GLSLversion: 1.20 Max texture size: 8192 Max FBO dump size: 8192x8192 Max combined texture units: 16 Max MSAA samples: 0 Viewport: 484x423 GPU memory: 256 MiB GPU Texture memory: 237 MiB ResolutionRatio: 1 | ||||
Steps To Reproduce | pload VISUALIZATION vinit vbackground -cubemap /Users/kirill/develop/kiara_2k_cube.jpg | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
cubemap_KO.png (219,671 bytes) |
|
Branch CR32036 has been created by kgv. SHA-1: 24a6c2b4fda6b60bd181d11ff16c7346f05d49d8 Detailed log of new commits: Author: kgv Date: Sun Jan 3 03:05:32 2021 +0300 0032036: Visualization, TKOpenGl - broken Cubemap background on GeForce 320M Enable GL_DEPTH_CLAMP while rendering skybox to workaround unexpected clamping issue on some GPUs. |
|
Patch is ready for review - OCCT branch: CR32036. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR32036-master-KGV |
|
Branch CR32036_1 has been created by kgv. SHA-1: 75c996d3405fa5bb82c6ca29aa761260c34b1be1 Detailed log of new commits: Author: kgv Date: Sun Jan 3 03:05:32 2021 +0300 0032036: Visualization, TKOpenGl - broken Cubemap background on GeForce 320M Enable GL_DEPTH_CLAMP while rendering skybox to workaround unexpected clamping issue on some GPUs. |
|
The patch was reviewed without remarks |
|
Combination - OCCT branch : IR-2021-01-15 master SHA - 6fab0b34288ef3f29ecf4eabc0283540460dbc31 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2021-01-15 SHA - a8521c25e41405ac279e65e1fcde5de75a344b0b was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17754.160000000134 / 17720.07000000011 [+0.19%] Products Total CPU difference: 12412.630000000105 / 12419.360000000095 [-0.05%] Windows-64-VC14: OCCT Total CPU difference: 19336.3125 / 19330.015625 [+0.03%] Products Total CPU difference: 13740.03125 / 13831.828125 [-0.66%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
occt: master 4b52faa5 2021-01-03 00:05:32 Committer: bugmaster Details Diff |
0032036: Visualization, TKOpenGl - broken Cubemap background on GeForce 320M Enable GL_DEPTH_CLAMP while rendering skybox to workaround unexpected clamping issue on some GPUs. |
Affected Issues 0032036 |
|
mod - src/OpenGl/OpenGl_Context.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Context.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_ShaderManager.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_View.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-01-03 00:33 | kgv | New Issue | |
2021-01-03 00:33 | kgv | Assigned To | => kgv |
2021-01-03 00:33 | kgv | File Added: cubemap_KO.png | |
2021-01-03 00:33 | kgv | Steps to Reproduce Updated | |
2021-01-03 00:34 | kgv | Relationship added | child of 0031649 |
2021-01-03 00:34 | kgv | Description Updated | |
2021-01-03 03:05 | git | Note Added: 0098012 | |
2021-01-03 11:10 | kgv | Note Added: 0098013 | |
2021-01-03 11:10 | kgv | Assigned To | kgv => osa |
2021-01-03 11:10 | kgv | Status | new => resolved |
2021-01-09 23:53 | git | Note Added: 0098024 | |
2021-01-12 11:15 | osa | Note Added: 0098084 | |
2021-01-12 11:15 | osa | Assigned To | osa => bugmaster |
2021-01-12 11:15 | osa | Status | resolved => reviewed |
2021-01-16 13:30 | bugmaster | Note Added: 0098145 | |
2021-01-16 13:30 | bugmaster | Status | reviewed => tested |
2021-01-16 13:51 | bugmaster | Test case number | => Not required |
2021-01-16 14:12 | bugmaster | Changeset attached | => occt master 4b52faa5 |
2021-01-16 14:12 | bugmaster | Status | tested => verified |
2021-01-16 14:12 | bugmaster | Resolution | open => fixed |