0032036: Visualization, TKOpenGl - broken Cubemap background on GeForce 320M

Enable GL_DEPTH_CLAMP while rendering skybox to workaround unexpected clamping issue on some GPUs.